--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="http://54.235.81.12/">KAF Consulting/RageCo</a>
+          <a class="brand" href="http://54.235.81.12/">KAF Consulting / RageCo</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="active"><a href="#">Home</a></li>
@@ -42,31 +42,11 @@
     </div>
 
     <div class="container">
-      <!-- Main hero unit for a primary marketing message or call to action -->
       <div class="hero-unit">
         <h1>Hello, nigga!</h1>
-        <p>If you are looking for a good design, lightweight and userful tool to manage issues and horrible bugs that cause you nightmares, don't hesiate in look for another site just take a look to <a href="http://www.mantisbt.org/">Mantis</a>, bored about fancy sites, ha! this is for you!</p>
+        <p>If you are looking for a good design, lightweight and useful tool to manage issues and horrible bugs that cause you nightmares and wet beds, don't hesitate in look for another site just take a look to <a href="http://www.mantisbt.org/">Mantis</a>, bored about fancy sites, this is for you!</p>
         <p><a href="/mantis" class="btn btn-primary btn-large">Take me there, now! &raquo;</a></p>
       </div>
     </div>
-
-  <div class="modal hide fade" id="myModal">
-    <div class="modal-header">
-      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-      <h3>Modal header</h3>
-    </div>
-    <div class="modal-body">
-      <p>One fine body…</p>
-    </div>
-    <div class="modal-footer">
-      <a href="#" class="btn" data-toggle="modal" data-target="#myModal">Close</a>
-      <a href="#" class="btn btn-primary" onclick="saveData()" >Save changes</a>
-    </div>
-  </div>
-  <script type="text/javascript">
-    function saveData(){
-      $('#myModal').modal('hide');
-    }
-  </script>
   </body>
 </html>
