change the welcome message to another better

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <div class="container">
       <div class="hero-unit">
-        <h1>Hello, nigga!</h1>
+        <h1>Hello, my friends!</h1>
         <p>If you are looking for a good design, lightweight and useful tool to manage issues and horrible bugs that cause you nightmares and wet beds, don't hesitate in look for another site just take a look to <a href="http://www.mantisbt.org/">Mantis</a>, bored about fancy sites, this is for you!</p>
         <p><a href="/mantis" class="btn btn-primary btn-large">Take me there, now! &raquo;</a></p>
       </div>
