--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       /* Custom container */
       .container-narrow {
         margin: 0 auto;
-        max-width: 700px;
+        max-width: 80%;
       }
       .container-narrow > hr {
         margin: 30px 0;
@@ -33,7 +33,7 @@
         <h3 class="muted">Rage Co</h3>
       </div>
       <hr>
-     	<div class="jumbotron">
+     	<div class="jumbotron" align="center">
      		<h1>What happen if we change the world?</h1>
      	</div>
 
