--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       /* Custom container */
       .container-narrow {
         margin: 0 auto;
-        max-width: 80%;
+        max-width: 700px;
       }
       .container-narrow > hr {
         margin: 30px 0;
