add about section and additional information

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 
       <div class="masthead">
         <ul class="nav nav-pills pull-right">
-          <li class="active"><a href="/">Home</a></li>
-          <li><a href="#aboutModal" role="button" data-toggle="modal">About</a></li>
-          <li><a href="mailto:hector.mendoza@kaf.com.mx">Contact</a></li>
+          <li class="active"><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="#aboutModal" data-toggle="modal" role="button">Contact</a></li>
           <li><a href="/mantis">Mantis</a></li>
         </ul>
         <h3 class="muted">Rage Co</h3>
@@ -38,19 +38,20 @@
      		<h1>What happen if we change the world?</h1>
      	</div>
 
-      <!-- Modal about -->
-      	<div class="modal hide fade" id="aboutModal" >
-		  	<div class="modal-header">
-		    	<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-		    	<h3>About</h3>
-		  	</div>
-		  	<div class="modal-body">
-		    	<p>Well maybe in the next days I'm going to write something interesting... </p>
-		  	</div>
-		  	<div class="modal-footer">
-		    	<a href="#aboutModal" class="btn" data-dismiss="modal">Close</a>
-			</div>
-		</div>
+        <!-- Modal about -->
+      <div class="modal hide fade" id="aboutModal" >
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+          <h3>About</h3>
+        </div>
+        <div class="modal-body">
+          <p>Shot me an email at <a href="mailto:hector.mendoza@kaf.com.mx">hector.mendoza@kaf.com.mx</a>, but because I don't like beer you can buy me a Coke.</p>
+        </div>
+        <div class="modal-footer">
+          <a href="#aboutModal" class="btn" data-dismiss="modal">Close</a>
+      </div>
+    </div>
+
 	</div>
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
