update contact section

--- a/about.html
+++ b/about.html
@@ -80,10 +80,10 @@
       <div class="modal hide fade" id="aboutModal" >
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-          <h3>About</h3>
+          <h3>Contact</h3>
         </div>
         <div class="modal-body">
-          <p>Shot me an email at <a href="mailto:hector.mendoza@kaf.com.mx">hector.mendoza@kaf.com.mx</a>, but because I don't like beer you can buy me a Coke :D</p>
+          <p>Shot me an email at <a href="mailto:hector.mendoza@kaf.com.mx">hector.mendoza@kaf.com.mx</a>, or because I don't like beer you can buy me a Coke. <br/><br/>Bitcoin Address: <strong>1AEGux1qpHVZWsawPdiR5TgQ2ciCSLhJ7C</strong></p>
         </div>
         <div class="modal-footer">
           <a href="#aboutModal" class="btn" data-dismiss="modal">Close</a>
