--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
                 <div id="bioTab" class="tab-pane active">
                   <div class="pagination pagination-left">
                     <p class="muted">
-                        I'm a software engineer since a few years ago, I like all technology releated stuffs from hardware to complex algorithms that could cause you nightmares all day long, so, why I would like doing that if is so complicated and each day is constantly going on?, well, because I think that this world just could be better, faster and smarter.
+                        I'm a software engineer since a few years ago, I like all technology releated stuffs from hardware to complex algorithms that may cause you nightmares, so, why I like to do that kind of things if those are so complicated and each day is constantly going and going on?, well, because I think that this world just should be better, faster and smarter, and that I can contribute a little on it.
                     </p>
                     <p class="muted">
                         ...
@@ -83,7 +83,7 @@
           <h3>Contact</h3>
         </div>
         <div class="modal-body">
-          <p>Shot me an email at <a href="mailto:hector.mendoza@kaf.com.mx">hector.mendoza@kaf.com.mx</a>, or because I don't like beer you can buy me a Coke. <br/><br/>Bitcoin Address: <strong>1AEGux1qpHVZWsawPdiR5TgQ2ciCSLhJ7C</strong></p>
+          <p>Either shot me an email at <a href="mailto:hector.mendoza@kaf.com.mx">hector.mendoza@kaf.com.mx</a> or because I don't like beer you can buy me a Coke. <br/><br/>Bitcoin Address: <strong>1AEGux1qpHVZWsawPdiR5TgQ2ciCSLhJ7C</strong></p>
         </div>
         <div class="modal-footer">
           <a href="#aboutModal" class="btn" data-dismiss="modal">Close</a>
