--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </div>
       <hr>
      	<div class="jumbotron" align="center">
-     		<h1>What happen if we change the world?</h1>
+     		<h1>What happen if we want to change the world?</h1>
      	</div>
 
         <!-- Modal about -->
@@ -45,7 +45,7 @@
           <h3>Contact</h3>
         </div>
         <div class="modal-body">
-          <p>Shot me an email at <a href="mailto:hector.mendoza@kaf.com.mx">hector.mendoza@kaf.com.mx</a>,or because I don't like beer you can buy me a Coke. <br/><br/>Bitcoin Address: <strong>1AEGux1qpHVZWsawPdiR5TgQ2ciCSLhJ7C</strong></p>
+          <p>Either shot me an email at <a href="mailto:hector.mendoza@kaf.com.mx">hector.mendoza@kaf.com.mx</a> or because I don't like beer you can buy me a Coke. <br/><br/>Bitcoin Address: <strong>1AEGux1qpHVZWsawPdiR5TgQ2ciCSLhJ7C</strong></p>
         </div>
         <div class="modal-footer">
           <a href="#aboutModal" class="btn" data-dismiss="modal">Close</a>
