change resource url to cdn

--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
     <title>RageCo.</title>
     <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="http://cdn.rageco.info/css/bootstrap.min.css" rel="stylesheet" media="screen">
      <style type="text/css">
       body {
         padding-top: 20px;
@@ -31,13 +31,13 @@
         <h3 class="muted">Rage Co</h3>
       </div>
       <div class="center">
-          <img src="img/daf.jpg">
+          <img src="http://cdn.rageco.info/img/daf.jpg">
           <div class="center">
               <h1>We can find that url, try again.</h1>
           </div>
       </div>
 	</div>
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="http://cdn.rageco.info/js/jquery.min.js"></script>
+    <script src="http://cdn.rageco.info/js/bootstrap.min.js"></script>
   </body>
   </html>
