--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>RageCo.</title>
     <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="http://cdn.rageco.info/css/bootstrap.min.css" rel="stylesheet" media="screen">
      <style type="text/css">
       body {
         padding-top: 20px;
@@ -53,7 +53,7 @@
     </div>
 
 	</div>
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="http://cdn.rageco.info/js/jquery.min.js"></script>
+    <script src="http://cdn.rageco.info/js/bootstrap.min.js"></script>
   </body>
   </html>
