unused files, and changed style embedded code

--- a/about.html
+++ b/about.html
@@ -5,21 +5,7 @@
     <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="http://cdn.rageco.info/css/bootstrap.min.css" rel="stylesheet" media="screen">
-     <style type="text/css">
-      body {
-        padding-top: 20px;
-        padding-bottom: 40px;
-      }
-
-      /* Custom container */
-      .container-narrow {
-        margin: 0 auto;
-        max-width: 700px;
-      }
-      .container-narrow > hr {
-        margin: 30px 0;
-      }
-    </style>
+    <link href="http://cdn.rageco.info/css/rc.css" rel="stylesheet" media="screen">
   </head>
   <body>
     <div class="container-narrow">
