add favicon, and handlebars template for the  modal panel

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="http://cdn.rageco.info/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link href="http://cdn.rageco.info/css/rc.css" rel="stylesheet" media="screen">
+    <link rel="shortcut icon" href="http://cdn.rageco.info/favicon.ico">
   </head>
   <body>
   	 <div class="container-narrow">
@@ -24,22 +25,12 @@
      		<h1>What happen if we want to change the world?</h1>
      	</div>
 
-        <!-- Modal about -->
-      <div class="modal hide fade" id="aboutModal" >
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-          <h3>Contact</h3>
-        </div>
-        <div class="modal-body">
-          <p>Either shot me an email at <a href="mailto:hector.mendoza@kaf.com.mx">hector.mendoza@kaf.com.mx</a> or because I don't like beer you can buy me a Coke. <br/><br/>Bitcoin Address: <strong>1AEGux1qpHVZWsawPdiR5TgQ2ciCSLhJ7C</strong></p>
-        </div>
-        <div class="modal-footer">
-          <a href="#aboutModal" class="btn" data-dismiss="modal">Close</a>
-      </div>
-    </div>
+      <div  id="contactTempl"></div>
 
-	</div>
+    </div>
     <script src="http://cdn.rageco.info/js/jquery.min.js"></script>
     <script src="http://cdn.rageco.info/js/bootstrap.min.js"></script>
+    <script src="http://cdn.rageco.info/js/handlebars.js"></script>
+    <script src="http://cdn.rageco.info/js/init.js"></script>
   </body>
-  </html>
+</html>
