--- a/404.html
+++ b/404.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="http://cdn.rageco.info/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link href="http://cdn.rageco.info/css/rc.css" rel="stylesheet" media="screen">
+    <link rel="shortcut icon" href="http://cdn.rageco.info/favicon.ico">
   </head>
   <body>
   	 <div class="container-narrow">
