change home link in 404 error page will redirect to to rageco.info instead of index page

--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@
 
       <div class="masthead">
         <ul class="nav nav-pills pull-right">
-          <li class="active"><a href="index.html">Home</a></li>
+          <li class="active"><a href="http://rageco.info">Home</a></li>
         </ul>
         <h3 class="muted">Rage Co</h3>
       </div>
