mantis url name and static framework scripts from custom cdn to cloudflare's static scripts

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <li class="active"><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="#aboutModal" data-toggle="modal" role="button">Contact</a></li>
-          <li><a href="/mantis">Mantis</a></li>
+          <li><a href="/mantis">Bug</a></li>
         </ul>
         <h3 class="muted">Rage Co</h3>
       </div>
@@ -28,9 +28,9 @@
       <div  id="contactTempl"></div>
 
     </div>
-    <script src="http://cdn.rageco.info/js/jquery.min.js"></script>
-    <script src="http://cdn.rageco.info/js/bootstrap.min.js"></script>
-    <script src="http://cdn.rageco.info/js/handlebars.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.0.rc.2/handlebars.min.js"></script>
     <script src="http://cdn.rageco.info/js/init.js"></script>
   </body>
 </html>
