remove copyright symbol and reserv symb

--- a/nex10.html
+++ b/nex10.html
@@ -13,7 +13,7 @@
                 <ul class="content">
                   <li>10.055 inches (0.39 mm) 2560 x 1600 (300 ppi)</li>
                   <li>WQXGA True RGB Real Stripe PLS</li>
-                  <li>Corning® Gorilla® Glass 2</li>
+                  <li>Corning Gorilla Glass 2</li>
                 </ul>
               </li>
               <li class="heading">Size</li>
